--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
 
 <section id="home" class="hero">
     <h1>Hi, I'm Nidhi 👋</h1>
-    <p>B.Tech CSE Student | Web Developer | Problem Solver</p>
+    <p>B.Tech CSE Student | Banasthali Vidyapith</p>
 
     <button onclick="scrollToSection('projects')">View My Work</button>
 
@@ -95,3 +95,4 @@ I am always eager to learn, collaborate, and contribute meaningfully to impactfu
 <script src="script.js"></script>
 </body>
 </html>
+
