Fix HTML encoding issues in index.html

--- a/index.html
+++ b/index.html
@@ -45,7 +45,7 @@ I am always eager to learn, collaborate, and contribute meaningfully to impactfu
 <section id="skills">
     <h2>Skills</h2>
     <div class="skills-grid">
-        <div class="card">C++</div>
+        <div class="card">C/C++</div>
         <div class="card">Python</div>
         <div class="card">HTML</div>
         <div class="card">CSS</div>
@@ -71,10 +71,10 @@ I am always eager to learn, collaborate, and contribute meaningfully to impactfu
     <h2>Positions & Participations</h2>
 
     <ul>
-        <li>Member, ACM Student Chapter – Event Management Team</li>
-        <li>Organising Team Member, HACKCELESTIA (Registration Team)</li>
-        <li>Selected among Top 50 Teams – Hack with Rajasthan 2026</li>
-        <li>Qualified Internal Level-1 – Smart India Hackathon (SIH)</li>
+        <div class="card">Member, ACM Student Chapter – Event Management Team</div>
+        <div class="card">Organising Team Member, HACKCELESTIA (Registration Team)</div>
+        <div class="card">Selected among Top 50 Teams – Hack with Rajasthan 2026</div>
+        <div class="card">Qualified Internal Level-1 – Smart India Hackathon (SIH)</div>
     </ul>
 </section>
 
@@ -95,4 +95,5 @@ I am always eager to learn, collaborate, and contribute meaningfully to impactfu
 <script src="script.js"></script>
 </body>
 </html>
+
 
