Revise index.html with updated content and structure
Updated the portfolio website to include new sections and improved content.

--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
 
 <section id="home" class="hero">
     <h1>Hi, I'm Nidhi 👋</h1>
-    <p>B.Tech CSE Student | Banasthali Vidyapith</p>
+    <p>B.Tech CSE Student | Web Developer | Problem Solver</p>
 
     <button onclick="scrollToSection('projects')">View My Work</button>
 
@@ -45,7 +45,7 @@ I am always eager to learn, collaborate, and contribute meaningfully to impactfu
 <section id="skills">
     <h2>Skills</h2>
     <div class="skills-grid">
-        <div class="card">C/C++</div>
+        <div class="card">C++</div>
         <div class="card">Python</div>
         <div class="card">HTML</div>
         <div class="card">CSS</div>
@@ -70,30 +70,31 @@ I am always eager to learn, collaborate, and contribute meaningfully to impactfu
     <section id="positions">
     <h2>Positions & Participations</h2>
 
-    <ul>
-        <div class="card">Member, ACM Student Chapter – Event Management Team</div>
-        <div class="card">Organising Team Member, HACKCELESTIA (Registration Team)</div>
-        <div class="card">Selected among Top 50 Teams – Hack with Rajasthan 2026</div>
-        <div class="card">Qualified Internal Level-1 – Smart India Hackathon (SIH)</div>
-    </ul>
+    <div class="positions-container">
+        <div class="position-box">Member, ACM Student Chapter – Event Management Team</div>
+        <div class="position-box">Organising Team Member, HACKCELESTIA (Registration Team)</div>
+        <div class="position-box">Selected among Top 50 Teams – Hack with Rajasthan 2026</div>
+        <div class="position-box">Qualified Internal Level-1 – Smart India Hackathon (SIH)</div>
+    </div>
 </section>
-
-
 
 <section id="contact">
-    <h2>Contact Me</h2>
-    <p>Email: <a href="mailto:nidhitiwari.0727@gmail.com">nidhitiwari.0727@gmail.com</a></p>
-    <p>Phone: <a href="tel:9971392258">9971392258</a></p>
-    <p>LinkedIn: 
-        <a href="https://www.linkedin.com/in/nidhi-tiwari-465717325/" target="_blank">
-            View Profile
-        </a>
-    </p>
+    <h2>Let's Build Something Amazing 🚀</h2>
+
+    <div class="contact-card">
+        <p>Have a project idea or opportunity?</p>
+        <p>Fell free to connect or collaborate.</p>
+
+        <div class="contact-links">
+            <a href="nidhitiwari.0727@gmail.com" class="contact-btn">Email Me</a>
+            <a href="https://www.linkedin.com/in/nidhi-tiwari-465717325/" target="_blank" class="contact-btn outline">LinkedIn</a>
+            <a href="https://github.com/nidhitiwari5" target="_blank" class="contact-btn outline">GitHub</a>
+        </div>
+    </div>
 </section>
+
 
 
 <script src="script.js"></script>
 </body>
 </html>
-
-
