Fix HTML structure and content updates

--- a/index.html
+++ b/index.html
@@ -21,8 +21,8 @@
 </nav>
 
 <section id="home" class="hero">
-    <h1>Hi, I'm Nidhi 👋</h1>
-    <p>B.Tech CSE Student | Web Developer | Problem Solver</p>
+    <h1>Hi, I'm Nidhi Tiwari<h1>
+    <p>B.Tech CSE Student | Banasthali Vidyapith</p>
 
     <button onclick="scrollToSection('projects')">View My Work</button>
 
@@ -79,7 +79,7 @@ I am always eager to learn, collaborate, and contribute meaningfully to impactfu
 </section>
 
 <section id="contact">
-    <h2>Let's Build Something Amazing 🚀</h2>
+    <h2>Let's Build Something Amazing!</h2>
 
     <div class="contact-card">
         <p>Have a project idea or opportunity?</p>
